// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AddressRow should emit action on select button 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
            <div
              class="inline-flex items-center no-ligatures"
            >
              <span
                class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                data-testid="address__wallet-name"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr7B…s6YUYD
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center text-sm font-bold text-center align-middle"
          >
            <div
              class="inline-flex items-center space-x-2"
            >
              <div
                class="inline-block p-1 text-theme-secondary-600"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-warning-400"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-end font-bold text-theme-secondary-text whitespace-nowrap"
          >
            <span
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 font-bold"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center font-bold text-theme-secondary-text"
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
          >
            <div
              class="sc-bdfBwQ iSzUah text-theme-success-600"
              data-testid="AddressRow__status"
              height="22"
              width="22"
            >
              <svg>
                status-ok.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV"
              data-testid="AddressRow__select-0"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Vote
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRow should render 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
            <div
              class="inline-flex items-center no-ligatures"
            >
              <span
                class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                data-testid="address__wallet-name"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr7B…s6YUYD
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center text-sm font-bold text-center align-middle"
          >
            <div
              class="inline-flex items-center space-x-2"
            >
              <div
                class="inline-block p-1 text-theme-secondary-600"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-warning-400"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-end font-bold text-theme-secondary-text whitespace-nowrap"
          >
            <span
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 font-bold"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center font-bold text-theme-secondary-text"
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
          >
            <div
              class="sc-bdfBwQ iSzUah text-theme-success-600"
              data-testid="AddressRow__status"
              height="22"
              width="22"
            >
              <svg>
                status-ok.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV"
              data-testid="AddressRow__select-0"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Vote
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRow should render for a multisignature wallet 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
            <div
              class="inline-flex items-center no-ligatures"
            >
              <span
                class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                data-testid="address__wallet-name"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr7B…s6YUYD
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center text-sm font-bold text-center align-middle"
          >
            <div
              class="inline-flex items-center space-x-2"
            >
              <div
                class="inline-block p-1 text-theme-secondary-600"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-warning-400"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-secondary-600"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    multisig.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-end font-bold text-theme-secondary-text whitespace-nowrap"
          >
            <span
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 font-bold"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center font-bold text-theme-secondary-text"
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
          >
            <div
              class="sc-bdfBwQ iSzUah text-theme-success-600"
              data-testid="AddressRow__status"
              height="22"
              width="22"
            >
              <svg>
                status-ok.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV"
              data-testid="AddressRow__select-0"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Vote
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRow should render when the maximum votes is greater than 1 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
            <div
              class="inline-flex items-center no-ligatures"
            >
              <span
                class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                data-testid="address__wallet-name"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr7B…s6YUYD
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center text-sm font-bold text-center align-middle"
          >
            <div
              class="inline-flex items-center space-x-2"
            >
              <div
                class="inline-block p-1 text-theme-secondary-600"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-warning-400"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-end font-bold text-theme-secondary-text whitespace-nowrap"
          >
            <span
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 font-bold"
          >
            <div
              class="flex items-center h-11"
            >
              <div
                class="flex -space-x-3"
              >
                <span
                  class="inline-block"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                        title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      />
                    </div>
                  </div>
                </span>
                <span
                  class="inline-block"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                        title="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                      />
                    </div>
                  </div>
                </span>
                <span
                  class="inline-block"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                        title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                      />
                    </div>
                  </div>
                </span>
                <span
                  class="inline-block"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(244, 67, 54)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"55\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/></svg>"
                        title="D5sRKWckH4rE1hQ9eeMeHAepgyC3cvJtwb"
                      />
                    </div>
                  </div>
                </span>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <div
              class="font-bold text-theme-secondary-400"
            >
              <span
                class="text-theme-secondary-text"
              >
                4
              </span>
              <span>
                /10
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV"
              data-testid="AddressRow__select-0"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Vote
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRow should render when the wallet has many votes 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
            <div
              class="inline-flex items-center no-ligatures"
            >
              <span
                class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                data-testid="address__wallet-name"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr7B…s6YUYD
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center text-sm font-bold text-center align-middle"
          >
            <div
              class="inline-flex items-center space-x-2"
            >
              <div
                class="inline-block p-1 text-theme-secondary-600"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-warning-400"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-end font-bold text-theme-secondary-text whitespace-nowrap"
          >
            <span
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 font-bold"
          >
            <div
              class="flex items-center h-11"
            >
              <div
                class="flex -space-x-3"
              >
                <span
                  class="inline-block"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                        title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                      />
                    </div>
                  </div>
                </span>
                <span
                  class="inline-block"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 188, 212)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"30\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"60\\" cx=\\"0\\" cy=\\"70\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/></svg>"
                        title="D5L5zXgvqtg7qoGimt5vYhFuf5Ued6iWVr"
                      />
                    </div>
                  </div>
                </span>
                <span
                  class="inline-block"
                >
                  <div
                    class="Avatar__AvatarWrapper-sc-1vsy2s2-0 gyYbkb"
                    data-testid="Avatar"
                  >
                    <div
                      class="w-full h-full"
                    >
                      <img
                        alt="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                        src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(63, 81, 181)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"40\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(0, 150, 136)\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"60\\" fill=\\"rgb(205, 220, 57)\\"/><circle r=\\"50\\" cx=\\"50\\" cy=\\"30\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                        title="DRgF3PvzeGWndQjET7dZsSmnrc6uAy23ES"
                      />
                    </div>
                  </div>
                </span>
                <div
                  class="Circle-uw7h4j-0 JkqUV relative border-theme-text text-theme-text"
                >
                  <span
                    class="font-semibold"
                  >
                    +2
                  </span>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT"
          >
            <div
              class="font-bold text-theme-secondary-400"
            >
              <span
                class="text-theme-secondary-text"
              >
                5
              </span>
              <span>
                /10
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV"
              data-testid="AddressRow__select-0"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Vote
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRow should render when wallet hasn't voted 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
            <div
              class="inline-flex items-center no-ligatures"
            >
              <span
                class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                data-testid="address__wallet-name"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr7B…s6YUYD
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center text-sm font-bold text-center align-middle"
          >
            <div
              class="inline-flex items-center space-x-2"
            >
              <div
                class="inline-block p-1 text-theme-secondary-600"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-warning-400"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-end font-bold text-theme-secondary-text whitespace-nowrap"
          >
            <span
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 font-bold"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center font-bold text-theme-secondary-text"
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
          >
            <div
              class="sc-bdfBwQ iSzUah text-theme-success-600"
              data-testid="AddressRow__status"
              height="22"
              width="22"
            >
              <svg>
                status-ok.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV"
              data-testid="AddressRow__select-0"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Vote
              </div>
            </button>
          </div>
        </td>
      </tr>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="DHijNjwnQWmTgQMGJoHub7CutwomG1J7vs"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(103, 58, 183)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"55\\" cx=\\"60\\" cy=\\"70\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"50\\" cx=\\"20\\" cy=\\"50\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"45\\" cx=\\"70\\" cy=\\"60\\" fill=\\"rgb(139, 195, 74)\\"/></svg>"
                  title="DHijNjwnQWmTgQMGJoHub7CutwomG1J7vs"
                />
              </div>
            </div>
            <div
              class="inline-flex items-center no-ligatures"
            >
              <span
                class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                data-testid="address__wallet-address"
              >
                DHijNj…G1J7vs
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center text-sm font-bold text-center align-middle"
          >
            <div
              class="inline-flex items-center space-x-2"
            />
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-end font-bold text-theme-secondary-text whitespace-nowrap"
          >
            <span
              data-testid="Amount"
            >
              0 DARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 font-bold"
          >
            <div
              class="Circle-uw7h4j-0 hvqrfp border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <span
              class="text-theme-secondary-400"
            >
              N/A
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center font-bold text-theme-secondary-text"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV"
              data-testid="AddressRow__select-1"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Vote
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRow should render when wallet not found for votes 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
            <div
              class="inline-flex items-center no-ligatures"
            >
              <span
                class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                data-testid="address__wallet-name"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr7B…s6YUYD
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center text-sm font-bold text-center align-middle"
          >
            <div
              class="inline-flex items-center space-x-2"
            >
              <div
                class="inline-block p-1 text-theme-secondary-600"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-warning-400"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-end font-bold text-theme-secondary-text whitespace-nowrap"
          >
            <span
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 font-bold"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center font-bold text-theme-secondary-text"
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
          >
            <div
              class="sc-bdfBwQ iSzUah text-theme-success-600"
              data-testid="AddressRow__status"
              height="22"
              width="22"
            >
              <svg>
                status-ok.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV"
              data-testid="AddressRow__select-0"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Vote
              </div>
            </button>
          </div>
        </td>
      </tr>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="DTLomV8hpJheFDPnBGB5EtrDCfDZJnG23z"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(205, 220, 57)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"60\\" cx=\\"100\\" cy=\\"50\\" fill=\\"rgb(244, 67, 54)\\"/><circle r=\\"45\\" cx=\\"20\\" cy=\\"40\\" fill=\\"rgb(3, 169, 244)\\"/><circle r=\\"35\\" cx=\\"30\\" cy=\\"60\\" fill=\\"rgb(33, 150, 243)\\"/></svg>"
                  title="DTLomV8hpJheFDPnBGB5EtrDCfDZJnG23z"
                />
              </div>
            </div>
            <div
              class="inline-flex items-center no-ligatures"
            >
              <span
                class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-text truncate font-semibold text-base"
                data-testid="address__wallet-address"
              >
                DTLomV…JnG23z
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center text-sm font-bold text-center align-middle"
          >
            <div
              class="inline-flex items-center space-x-2"
            />
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-end font-bold text-theme-secondary-text whitespace-nowrap"
          >
            <span
              data-testid="Amount"
            >
              0 DARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 font-bold"
          >
            <div
              class="Circle-uw7h4j-0 hvqrfp border-theme-secondary-300 dark:border-theme-secondary-800"
            />
            <span
              class="text-theme-secondary-400"
            >
              N/A
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center font-bold text-theme-secondary-text"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
          />
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV"
              data-testid="AddressRow__select-1"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Vote
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRow should set dark shadow color on mouse events 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
            <div
              class="inline-flex items-center no-ligatures"
            >
              <span
                class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                data-testid="address__wallet-name"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr7B…s6YUYD
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center text-sm font-bold text-center align-middle"
          >
            <div
              class="inline-flex items-center space-x-2"
            >
              <div
                class="inline-block p-1 text-theme-secondary-600"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-warning-400"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-end font-bold text-theme-secondary-text whitespace-nowrap"
          >
            <span
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 font-bold"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center font-bold text-theme-secondary-text"
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
          >
            <div
              class="sc-bdfBwQ iSzUah text-theme-success-600"
              data-testid="AddressRow__status"
              height="22"
              width="22"
            >
              <svg>
                status-ok.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV"
              data-testid="AddressRow__select-0"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Vote
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;

exports[`AddressRow should set light shadow color on mouse events 1`] = `
<DocumentFragment>
  <table>
    <tbody>
      <tr
        class="TableRow__TableRowStyled-sc-1br46dw-0 fzBhIQ"
        data-testid="TableRow"
      >
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 DpDcR space-x-4"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(0, 150, 136)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"80\\" cy=\\"50\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"35\\" cx=\\"100\\" cy=\\"40\\" fill=\\"rgb(156, 39, 176)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"70\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
                  title="D8rr7B1d6TL6pf14LgMz4sKp1VBMs6YUYD"
                />
              </div>
            </div>
            <div
              class="inline-flex items-center no-ligatures"
            >
              <span
                class="max-w-24 flex-auto truncate mr-2 font-semibold text-base text-theme-text"
                data-testid="address__wallet-name"
              >
                <span
                  class="TruncateEnd__Wrapper-sc-1w1nvb9-0"
                  data-testid="TruncateEnd"
                >
                  ARK Wallet 1
                </span>
              </span>
              <span
                class="TruncateMiddle__Wrapper-sc-3j3e79-0 text-theme-secondary-500 dark:text-theme-secondary-700 truncate font-semibold text-base"
                data-testid="address__wallet-address"
              >
                D8rr7B…s6YUYD
              </span>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center text-sm font-bold text-center align-middle"
          >
            <div
              class="inline-flex items-center space-x-2"
            >
              <div
                class="inline-block p-1 text-theme-secondary-600"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    ledger.svg
                  </svg>
                </div>
              </div>
              <div
                class="inline-block p-1 text-theme-warning-400"
              >
                <div
                  class="sc-bdfBwQ dCuQLW"
                  height="1em"
                  width="20"
                >
                  <svg>
                    star.svg
                  </svg>
                </div>
              </div>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-end font-bold text-theme-secondary-text whitespace-nowrap"
          >
            <span
              data-testid="Amount"
            >
              33.75089801 DARK
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT space-x-4 font-bold"
          >
            <div
              class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cjwvlc"
              data-testid="Avatar"
            >
              <div
                class="w-full h-full"
              >
                <img
                  alt="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                  src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"50\\" cx=\\"60\\" cy=\\"40\\" fill=\\"rgb(139, 195, 74)\\"/><circle r=\\"45\\" cx=\\"0\\" cy=\\"30\\" fill=\\"rgb(0, 188, 212)\\"/><circle r=\\"40\\" cx=\\"90\\" cy=\\"50\\" fill=\\"rgb(255, 193, 7)\\"/></svg>"
                  title="D61mfSggzbvQgTUe6JhYKH2doHaqJ3Dyib"
                />
              </div>
            </div>
            <span>
              arkx
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center font-bold text-theme-secondary-text"
          >
            <span>
              #
            </span>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 clvEgT justify-center"
          >
            <div
              class="sc-bdfBwQ iSzUah text-theme-success-600"
              data-testid="AddressRow__status"
              height="22"
              width="22"
            >
              <svg>
                status-ok.svg
              </svg>
            </div>
          </div>
        </td>
        <td>
          <div
            class="TableCell__TableCellInnerWrapper-sc-1mn4l8o-0 kjTmcB justify-end"
          >
            <button
              class="Button__StyledButton-mdtvtf-0 iUSBMV"
              data-testid="AddressRow__select-0"
              type="button"
            >
              <div
                class="flex relative items-center space-x-2"
              >
                Vote
              </div>
            </button>
          </div>
        </td>
      </tr>
    </tbody>
  </table>
</DocumentFragment>
`;
